--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <header>                
                 <ul>
                     <li><a href="index.html"><i class="fa-solid fa-house-laptop"></i> Home</a></li>
-                    <li><a href=""><i class="fa-solid fa-circle-info"></i> About</a></li>
+                    <li><a href="about.html"><i class="fa-solid fa-circle-info"></i> About</a></li>
                     <li>
                         <div class="drop-down">
                             <p><i class="fa-solid fa-book"></i> Read</a></p>
@@ -28,7 +28,7 @@
                     </li>
                     <li>
                         <div class="drop-down">
-                            <p><i class="fa-solid fa-address-card"></i> Reviews</p>
+                            <p><i class="fa-solid fa-address-card"></i> Blog</p>
                             <div class="review-rev">
                                 <ul>
                                     <li><a href="">Elizabeth</a></li>
@@ -48,7 +48,7 @@
             <div class="books">
                 <div class="trevor">
                     <div>
-                        <a href=""><img src="Images/trevor.jpg" alt=""></a>
+                        <a href="trevor.html"><img src="Images/8ff66095109e660fd9ef145a62afa7aa.jpg" alt="born a crime book"></a>
                     </div>
                     <div class="text-quote">
                         <h1 class="quotes">“In my world, a woman was the most powerful thing that I knew. Still is.”</h1>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="spencer">
                     <div>
-                        <a href=""><img src="Images/cheese.jpeg" alt=""></a>
+                        <a href="spencer.html"><img src="Images/cheese.jpeg" alt="who moved my cheese book"></a>
                     </div>
                     <div class="text-quote">
                         <h1 class="quotes">“What you are afraid of is never as bad as what you imagine!”</h1>
