Added responsiveness to the home page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                     <li><a href="">Elizabeth</a></li>
                                     <li><a href="">Hewan</a></li>
                                     <li><a href="">Nebyat</a></li>
-                                    <li><a href="">Saloi</a></li>
+                                    <li><a href="https://born-a-crime-review.netlify.app/">Saloi</a></li>
                                 </ul>    
                             </div>
                         </div>
@@ -48,7 +48,7 @@
             <div class="books">
                 <div class="trevor">
                     <div>
-                        <a href=""><img src="Images/trevor.jpg" alt=""></a>
+                        <a href=""><img src="Images/born-a-crime-review.jpg" alt=""></a>
                     </div>
                     <div class="text-quote">
                         <h1 class="quotes">“In my world, a woman was the most powerful thing that I knew. Still is.”</h1>
